--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -5,6 +5,7 @@ body{
     height: 100%;
     box-sizing: border-box;
     overflow: hidden;
+    font-family: Arial, Helvetica, sans-serif;
 
     h1,h2,h3,h4,p,ul,li{
         margin: 0;
@@ -27,7 +28,7 @@ body{
         // border: 1px solid red;
         box-sizing: border-box;
         width: 100%;
-        height: 3.5%;
+        height: 4%;
         
         .top-menu{
             height: 100%;
@@ -109,7 +110,7 @@ body{
         box-sizing: border-box;
         // border: 1px solid blue;
         width: 100%;
-        height: 96.5%;
+        height: 96%;
         // display: grid;
         // overflow: hidden;
         
@@ -225,9 +226,10 @@ body{
             float: left;
             height: 100%;
             .text-area{
-                width: 100%;
+                width: 99%;
                 height: 94%;
-                overflow: hidden;
+                margin-left: auto;
+                // overflow: hidden;
                 box-sizing: border-box;
                 // margin-left: auto;
             }
