--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -63,15 +63,17 @@ body{
                 display: none;
                 position: absolute;
                 background-color: #f9f9f9;
-                min-width: 120px;
+                min-width: 150px;
                 box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.1);
 
                 .menu{
                     color: #000;
                     padding: 7px 10px;
-                    font-size: 12px;
+                    font-size: 15px;
                     text-decoration: none;
-                    display: block;
+                    // display: block;
+                    // z-index: 1;
+                    // position: relative;
 
                     &:hover{
                         // background-color: #f1f1f1;
@@ -82,7 +84,7 @@ body{
                 .sub-dropdown{
                     color: #000;
                     padding: 7px 10px;
-                    font-size: 12px;
+                    font-size: 15px;
                     display: block;
                     overflow: hidden;
 
@@ -104,9 +106,10 @@ body{
                         position: absolute;
                         background-color: #f9f9f9;
                         display: none;
-                        margin-left: 110px;
-                        margin-top: -21px;
-                        min-width: 120px;
+                        margin-left: 140px;
+                        margin-top: -24px;
+                        min-width: 150px;
+                        z-index: 1;
                     }
                 }
             }
@@ -136,7 +139,7 @@ body{
             z-index: -1;
             // float: left;
             height: 96%;
-            color: #333;
+            color: #666;
             
             h3{
                 margin: 20px 0;
@@ -149,6 +152,12 @@ body{
                 .content{
                     margin: 25px;
                 }
+
+                i{
+                    font-size: 20px;
+                    color: #69afdd;
+                    margin-right: 7px;
+                }
             }
             .side-bar-bottom{
                 .content{
@@ -160,12 +169,17 @@ body{
         .main-view{
             // margin-left: 250px;
             // margin-left: -350px;
+            // margin-right: 350px;
             // opacity: .2;
             box-sizing: border-box;
             // border: 1px solid red;
             width: 100%;
             height: 100%;
             float: left;
+            // position: relative;
+            // right: 350px;
+            // left: 250px;
+            // z-index: -1;
         }
         .main-view-top{
             height: 10%;
@@ -375,6 +389,9 @@ body{
                 color: #666;
             }
             
+            span{
+                float: right;
+            }
 
             .row1{
                 border-bottom: 1px solid #ddd;
