made changes to the height size of notelist installed mobx and mobx-react

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -270,10 +270,14 @@ body{
             h2{
                 color: #555;
                 font-weight: 500;
+                height: 26px;
+                overflow: hidden;
                 // font-size: 20px;
             }
             p{
                 color: #777;
+                height: 17px;
+                overflow: hidden;
             }
         }
         .sect4{
