--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -176,6 +176,7 @@ body{
             width: 100%;
             height: 100%;
             float: left;
+            margin-left: 0;
             // position: relative;
             // right: 350px;
             // left: 250px;
