--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -273,7 +273,7 @@ body{
                 font-weight: 500;
                 height: 26px;
                 overflow: hidden;
-                // font-size: 20px;
+                font-size: 20px;
             }
             p{
                 color: #777;
